<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="16dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5.0"
        android:layout_marginLeft="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_tpms_status"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:text="@string/txt_status"
                android:textSize="20dp"
                android:gravity="left" />
            <Button
                android:id="@+id/btn_refresh_status"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_refresh_all"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh_all"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_tire1"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:text="@string/txt_tire1"
                android:textSize="18dp"
                android:gravity="left" />
            <Button
                android:id="@+id/btn_refresh_tire1"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_match_tire1"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_match"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_unwatch_tire1"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_unwatch"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_tire2"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:text="@string/txt_tire2"
                android:textSize="18dp"
                android:gravity="left" />
            <Button
                android:id="@+id/btn_refresh_tire2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_match_tire2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_match"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_unwatch_tire2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_unwatch"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_tire3"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:text="@string/txt_tire3"
                android:textSize="18dp"
                android:gravity="left" />
            <Button
                android:id="@+id/btn_refresh_tire3"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_match_tire3"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_match"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_unwatch_tire3"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_unwatch"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_tire4"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:text="@string/txt_tire4"
                android:textSize="18dp"
                android:gravity="left" />
            <Button
                android:id="@+id/btn_refresh_tire4"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_match_tire4"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_match"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_unwatch_tire4"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_unwatch"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_tire5"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:text="@string/txt_tire5"
                android:textSize="18dp"
                android:gravity="left" />
            <Button
                android:id="@+id/btn_refresh_tire5"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_match_tire5"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_match"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_unwatch_tire5"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_unwatch"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/btn_refresh_tire_all"
                android:layout_width="193dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh_all"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_match_tire_all"
                android:layout_width="193dp"
                android:layout_height="50dp"
                android:text="@string/btn_match_all"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_unwatch_tire_all"
                android:layout_width="193dp"
                android:layout_height="50dp"
                android:text="@string/btn_unwatch_all"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6.0"
        android:layout_marginLeft="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_alert1"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/txt_alert1"
                android:textSize="18dp"
                android:gravity="left" />
            <Button
                android:id="@+id/btn_refresh_alert1"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_config_alert1"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_config"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_alert2"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/txt_alert2"
                android:textSize="18dp"
                android:gravity="left" />
            <Button
                android:id="@+id/btn_refresh_alert2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_config_alert2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_config"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_alert3"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/txt_alert3"
                android:textSize="18dp"
                android:gravity="left" />
            <Button
                android:id="@+id/btn_refresh_alert3"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_config_alert3"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_config"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_alert4"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/txt_alert4"
                android:textSize="18dp"
                android:gravity="left" />
            <Button
                android:id="@+id/btn_refresh_alert4"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_config_alert4"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_config"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_alert5"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/txt_alert5"
                android:textSize="18dp"
                android:gravity="left" />
            <Button
                android:id="@+id/btn_refresh_alert5"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_config_alert5"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_config"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_alert6"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/txt_alert6"
                android:textSize="18dp"
                android:gravity="left" />
            <Button
                android:id="@+id/btn_refresh_alert6"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_config_alert6"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_config"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/btn_refresh_alert_all"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/btn_refresh_all"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/btn_config_alert_all"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/btn_config_all"
                android:textSize="20dp"
                android:gravity="center"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
